# django-multiple-authentication

./: .gitignore  .readthedocs.yaml  LICENCE  README.rst  requirements.txt  setup.cfg
docs/source/: conf.py  getting_started.rst  index.rst  usage.rst
multiple_auth/: apps.py  backends.py
