# setup.cfg
[metadata]
name = django-multiple-auth
version = 2.0.1
author = Oluwashola David
author_email = koredeoluwashola@gmail.com
maintainer = Oluwashola David
maintainer_email = koredeoluwashola@gmail.com
description = Enables developers to implement login with email or username or any other field on your user model in django
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/korededavid/django-multiple-auth
license = MIT LICENCE
keywords = django authenticate python authentication python login user username email django-multiple-auth multiple-auth  multiple auth
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=2.2